--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,6 +1,12 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="afa968">  <td>21/07/26 13:00:33</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="App.Login()[pri:0, instance:Ejercicio1.B.App@a3d8174]">Login</td> 
-  <td>main@690052870</td>   <td></td> </tr>
+<tr bgcolor="7bddad">  <td>21/08/12 14:27:19</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AccountTab.parte6()[pri:6, instance:testNGClasses.AccountTab@505fc5a4]">parte6</td> 
+  <td>main@762384154</td>   <td></td> </tr>
+<tr bgcolor="7bddad">  <td>21/08/12 14:27:30</td>   <td>10645</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;AccountTab.close()[pri:0, instance:testNGClasses.AccountTab@505fc5a4]">&lt;&lt;close</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@762384154</td>   <td></td> </tr>
+<tr bgcolor="7bddad">  <td>21/08/12 14:27:13</td>   <td>-6815</td> <td>&nbsp;</td><td title="&gt;&gt;AccountTab.driver()[pri:0, instance:testNGClasses.AccountTab@505fc5a4]">&gt;&gt;driver</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@762384154</td>   <td></td> </tr>
+<tr bgcolor="7bddad">  <td>21/08/12 14:27:16</td>   <td>-3564</td> <td>&nbsp;</td><td title="&gt;&gt;AccountTab.login()[pri:0, instance:testNGClasses.AccountTab@505fc5a4]">&gt;&gt;login</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@762384154</td>   <td></td> </tr>
 </table>
