--- a/test-output/old/Suite/methods-alphabetical.html
+++ b/test-output/old/Suite/methods-alphabetical.html
@@ -1,12 +1,52 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="7bddad">  <td>21/08/11 18:40:53</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;NavigateBetweenTabs.close()[pri:0, instance:testNGClasses.NavigateBetweenTabs@5403f35f]">&lt;&lt;close</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@627318073</td>   <td></td> </tr>
-<tr bgcolor="7bddad">  <td>21/08/11 18:40:51</td>   <td>-2087</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;NavigateBetweenTabs.driver()[pri:0, instance:testNGClasses.NavigateBetweenTabs@5403f35f]">&gt;&gt;driver</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@627318073</td>   <td></td> </tr>
-<tr bgcolor="7bddad">  <td>21/08/11 18:40:53</td>   <td>-2</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="NavigateBetweenTabs.ejecucion()[pri:2, instance:testNGClasses.NavigateBetweenTabs@5403f35f]">ejecucion</td> 
-  <td>main@627318073</td>   <td></td> </tr>
-<tr bgcolor="7bddad">  <td>21/08/11 18:40:53</td>   <td>-10</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="NavigateBetweenTabs.sarasa()[pri:1, instance:testNGClasses.NavigateBetweenTabs@5403f35f]">sarasa</td> 
-  <td>main@627318073</td>   <td></td> </tr>
+<tr bgcolor="7bddad">  <td>21/09/06 16:19:16</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;ServiceTab.close()[pri:0, instance:testNGClasses.ServiceTab@31e5415e]">&lt;&lt;close</td> 
+<td>&nbsp;</td>  <td>main@910599202</td>   <td></td> </tr>
+<tr bgcolor="95e8a7">  <td>21/09/06 16:21:02</td>   <td>105422</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;AccountTab.close()[pri:0, instance:testNGClasses.AccountTab@5d0a1059]">&lt;&lt;close</td> 
+<td>&nbsp;</td>  <td>main@910599202</td>   <td></td> </tr>
+<tr bgcolor="95e8a7">  <td>21/09/06 16:21:02</td>   <td>105422</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;AccountTab.close()[pri:0, instance:testNGClasses.AccountTab@5d0a1059]">&lt;&lt;close</td> 
+<td>&nbsp;</td>  <td>main@910599202</td>   <td></td> </tr>
+<tr bgcolor="95e8a7">  <td>21/09/06 16:21:02</td>   <td>105422</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;AccountTab.close()[pri:0, instance:testNGClasses.AccountTab@5d0a1059]">&lt;&lt;close</td> 
+<td>&nbsp;</td>  <td>main@910599202</td>   <td></td> </tr>
+<tr bgcolor="95e8a7">  <td>21/09/06 16:21:02</td>   <td>105422</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;AccountTab.close()[pri:0, instance:testNGClasses.AccountTab@5d0a1059]">&lt;&lt;close</td> 
+<td>&nbsp;</td>  <td>main@910599202</td>   <td></td> </tr>
+<tr bgcolor="b6cdac">  <td>21/09/06 16:21:35</td>   <td>138817</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;ContactTab.close()[pri:0, instance:testNGClasses.ContactTab@3ee37e5a]">&lt;&lt;close</td> 
+<td>&nbsp;</td>  <td>main@910599202</td>   <td></td> </tr>
+<tr bgcolor="7bddad">  <td>21/09/06 16:18:29</td>   <td>-47305</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;ServiceTab.driver()[pri:0, instance:testNGClasses.ServiceTab@31e5415e]">&gt;&gt;driver</td> 
+<td>&nbsp;</td>  <td>main@910599202</td>   <td></td> </tr>
+<tr bgcolor="95e8a7">  <td>21/09/06 16:20:42</td>   <td>85378</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;AccountTab.driver()[pri:0, instance:testNGClasses.AccountTab@5d0a1059]">&gt;&gt;driver</td> 
+<td>&nbsp;</td>  <td>main@910599202</td>   <td></td> </tr>
+<tr bgcolor="95e8a7">  <td>21/09/06 16:20:42</td>   <td>85378</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;AccountTab.driver()[pri:0, instance:testNGClasses.AccountTab@5d0a1059]">&gt;&gt;driver</td> 
+<td>&nbsp;</td>  <td>main@910599202</td>   <td></td> </tr>
+<tr bgcolor="95e8a7">  <td>21/09/06 16:20:42</td>   <td>85378</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;AccountTab.driver()[pri:0, instance:testNGClasses.AccountTab@5d0a1059]">&gt;&gt;driver</td> 
+<td>&nbsp;</td>  <td>main@910599202</td>   <td></td> </tr>
+<tr bgcolor="95e8a7">  <td>21/09/06 16:20:42</td>   <td>85378</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;AccountTab.driver()[pri:0, instance:testNGClasses.AccountTab@5d0a1059]">&gt;&gt;driver</td> 
+<td>&nbsp;</td>  <td>main@910599202</td>   <td></td> </tr>
+<tr bgcolor="b6cdac">  <td>21/09/06 16:21:06</td>   <td>109573</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;ContactTab.driver()[pri:0, instance:testNGClasses.ContactTab@3ee37e5a]">&gt;&gt;driver</td> 
+<td>&nbsp;</td>  <td>main@910599202</td>   <td></td> </tr>
+<tr bgcolor="7bddad">  <td>21/09/06 16:18:32</td>   <td>-44059</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;ServiceTab.login()[pri:0, instance:testNGClasses.ServiceTab@31e5415e]">&gt;&gt;login</td> 
+<td>&nbsp;</td>  <td>main@910599202</td>   <td></td> </tr>
+<tr bgcolor="95e8a7">  <td>21/09/06 16:20:44</td>   <td>88206</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;AccountTab.login()[pri:0, instance:testNGClasses.AccountTab@5d0a1059]">&gt;&gt;login</td> 
+<td>&nbsp;</td>  <td>main@910599202</td>   <td></td> </tr>
+<tr bgcolor="95e8a7">  <td>21/09/06 16:20:44</td>   <td>88206</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;AccountTab.login()[pri:0, instance:testNGClasses.AccountTab@5d0a1059]">&gt;&gt;login</td> 
+<td>&nbsp;</td>  <td>main@910599202</td>   <td></td> </tr>
+<tr bgcolor="95e8a7">  <td>21/09/06 16:20:44</td>   <td>88206</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;AccountTab.login()[pri:0, instance:testNGClasses.AccountTab@5d0a1059]">&gt;&gt;login</td> 
+<td>&nbsp;</td>  <td>main@910599202</td>   <td></td> </tr>
+<tr bgcolor="95e8a7">  <td>21/09/06 16:20:44</td>   <td>88206</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;AccountTab.login()[pri:0, instance:testNGClasses.AccountTab@5d0a1059]">&gt;&gt;login</td> 
+<td>&nbsp;</td>  <td>main@910599202</td>   <td></td> </tr>
+<tr bgcolor="b6cdac">  <td>21/09/06 16:21:09</td>   <td>112526</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;ContactTab.login()[pri:0, instance:testNGClasses.ContactTab@3ee37e5a]">&gt;&gt;login</td> 
+<td>&nbsp;</td>  <td>main@910599202</td>   <td></td> </tr>
+<tr bgcolor="7bddad">  <td>21/09/06 16:18:33</td>   <td>-43416</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ServiceTab.parte1()[pri:1, instance:testNGClasses.ServiceTab@31e5415e]">parte1</td> 
+  <td>main@910599202</td>   <td></td> </tr>
+<tr bgcolor="95e8a7">  <td>21/09/06 16:19:34</td>   <td>17502</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AccountTab.parte2()[pri:2, instance:testNGClasses.AccountTab@5d0a1059]">parte2</td> 
+  <td>main@910599202</td>   <td></td> </tr>
+<tr bgcolor="95e8a7">  <td>21/09/06 16:20:02</td>   <td>45395</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AccountTab.parte3()[pri:3, instance:testNGClasses.AccountTab@5d0a1059]">parte3</td> 
+  <td>main@910599202</td>   <td></td> </tr>
+<tr bgcolor="b6cdac">  <td>21/09/06 16:21:13</td>   <td>116332</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ContactTab.parte4()[pri:0, instance:testNGClasses.ContactTab@3ee37e5a]">parte4</td> 
+  <td>main@910599202</td>   <td></td> </tr>
+<tr bgcolor="95e8a7">  <td>21/09/06 16:20:28</td>   <td>71553</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AccountTab.parte5()[pri:5, instance:testNGClasses.AccountTab@5d0a1059]">parte5</td> 
+  <td>main@910599202</td>   <td></td> </tr>
+<tr bgcolor="95e8a7">  <td>21/09/06 16:20:53</td>   <td>96929</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AccountTab.parte6()[pri:6, instance:testNGClasses.AccountTab@5d0a1059]">parte6</td> 
+  <td>main@910599202</td>   <td></td> </tr>
 </table>
